--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -32,6 +33,8 @@ ul li{
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
+    box-shadow: 0 2px 4px lightgrey;
+    padding: 2rem 0;
 }
 .contenedor .fila ul li img{
     width: 25rem;
@@ -43,6 +46,7 @@ ul li{
 .contenedor .fila ul li p{
     padding: 1rem 1rem 0 1rem;
     width: 270px;
+    font-size: 15px;
 }
 .imgModal{
     width: 76rem;
@@ -68,7 +72,7 @@ ul li{
     width: 14rem;
     height: 5rem;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     cursor: pointer;
     background: lightgrey;
 }
@@ -77,6 +81,35 @@ ul li{
 }
 .green:hover{
     transform: scale(1.02);
+}
+
+.jumboPadre{
+    width: 100%;
+    height: 40vh;
+    background: #f1f1f1;
+}
+.jumboPadre .jumboHijo{
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.jumboPadre .jumboHijo h2,h3{
+    margin: 0;
+}
+
+.jumboPadre .jumboHijo h2{
+    font-size: 4.2rem;
+    font-weight: 500;
+    font-family: 'Pacifico', cursive;
+}
+.jumboPadre .jumboHijo h3{
+    font-style: italic;
+    letter-spacing: 2px;
+    margin-top: 1rem;
+    font-size: 3rem;
 }
 
 
