--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -82,35 +82,127 @@ ul li{
 .green:hover{
     transform: scale(1.02);
 }
+ /*barra de arriba*/
 
-.jumboPadre{
-    width: 100%;
-    height: 40vh;
-    background: #f1f1f1;
-}
-.jumboPadre .jumboHijo{
-    height: inherit;
+ .barrita1{
     display: flex;
-    justify-content: center;
+    width: 100vw;
+    height: 4rem;
+    background-color: #fff200;
+    /*background: #ffb61c;*/
+    font-size: 1.4rem; 
+    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
+}
+.barrita2{
+    display: flex;
+    margin-right: 2rem;
+}
+.barritahijo{
+   display: flex;
+   align-items: center;
+   margin-right: 2rem;
+}
+.barritahijo a{
+    margin: 0 1rem;
+}
+.barrita1 h4{
+    margin-left: 4rem;
+    font-size: 2rem;
+}
+.barrita2 .f, .i, .t,.p{
+    margin: .7rem;
+    color: black;
 }
 
-.jumboPadre .jumboHijo h2,h3{
-    margin: 0;
+.p{
+    margin-right: 4rem;
 }
-
-.jumboPadre .jumboHijo h2{
-    font-size: 4.2rem;
-    font-weight: 500;
-    font-family: 'Pacifico', cursive;
-}
-.jumboPadre .jumboHijo h3{
-    font-style: italic;
-    letter-spacing: 2px;
-    margin-top: 1rem;
+.barrita h3{
+    /*font-family: ;*/
     font-size: 3rem;
+    font-weight: 900;
+    letter-spacing: 2px;
+    line-height: 10rem;
+    text-align: center;
 }
 
+/* fin barra de arriba*/
+
+
+
+.secNav{
+    width: 100vw;
+}
+.secNav .secNavwrapper{
+    width: inherit;
+    height: inherit;
+}
+.secNav .secNavwrapper img{
+    width: 100%;
+    height: 100%;
+}
+.secNav .secNavwrapper{
+    display: flex;
+    height: 16vh;
+    width: 100%;
+}
+
+.secNav .secNavwrapper .relleno{
+    flex: 1;
+    background: rgb(0, 0, 0,0.8);
+    border-right: 8px solid #639bf7;
+}
+.secNav .secNavwrapper .relleno h1{
+    font-family: 'Shadows Into Light', cursive;
+    text-align: center;
+    color: #f5f20e;
+    font-size: 4.7rem;
+    letter-spacing: 1px;
+    font-weight: 600;
+}
+.secNav .secNavwrapper nav{
+    height: inherit;
+    background: rgb(0, 0, 0,0.8);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex: 2;
+}
+.secNav .secNavwrapper nav a{
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: #f5f20e;
+    letter-spacing: 1.3px;
+}
+.secNav .secNavwrapper nav a:hover{
+    text-decoration: underline;
+}
+.secNav .secNavwrapper .hogar{
+    font-size: 1.8rem;
+    font-style: italic;
+    letter-spacing: 2.3px;
+    background-color: orange;
+    padding: 0 2rem;
+    border-radius: 8px;
+    color: white;
+    font-weight: 600;
+}
+.headerTotal{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.hero{
+    width: 100%;
+    height: 100vh;
+  
+}
+.hero img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 
