--- a/public/contactoestilo.css
+++ b/public/contactoestilo.css
@@ -156,7 +156,7 @@
 b{
     color: red;
     font-size: 14px;
-    padding: 1rem 0;
+    padding-bottom: 1rem;
 }
 .areaTexto{
     font-size: 1.6rem;
