--- a/public/contactoestilo.css
+++ b/public/contactoestilo.css
@@ -162,4 +162,17 @@ b{
     font-size: 1.6rem;
 }
 
+.sesion{
+    text-align: center;
+    background: green;
+    padding: 2rem;
+    color: white;
+    font-size: 1.8rem;
+    width: 80%;
+    margin: auto;
+    margin-top: 3%;
+    border-radius: 8px;
+
+}
+
 
