--- a/public/style.css
+++ b/public/style.css
@@ -335,9 +335,12 @@ ul li{
 }
 .tarjetasTotal .tarjetasWrapper .contenedorImagen{
     width: 100%;
+    height: 42%;
 }
 .tarjetasTotal .tarjetasWrapper .contenedorImagen img{
     width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 .tarjetasTotal .tarjetasWrapper .contenidoTarjeta h4{
     text-transform: capitalize;
