--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -228,7 +229,6 @@ ul li{
     margin: 0;
     background: black;
     color: yellow;
-    margin-top: 6rem;
     height: 19vh;
     display: flex;
     align-items: center;
@@ -266,6 +266,7 @@ ul li{
     width: 22%;
     background: black;
     height: 80vh;
+    font-family: 'Shadows Into Light', cursive;
 }
 
 .productWrapper  .menuLista ul li{
@@ -278,8 +279,8 @@ ul li{
     padding: 5px 10px;
     font-weight: 700;
     justify-content: space-between;
-    letter-spacing: 1.5px;
-    font-size: 16px;
+    letter-spacing: 2.2px;
+    font-size: 1.9rem;
 }
 .productWrapper .menuLista ul li button{
     background: none;
@@ -304,7 +305,6 @@ ul li{
 
 .productoEnvoltura .menuLista ul li:hover{
     cursor: pointer;
-   /* background: grey;*/
 }
 .productoEnvoltura .menuLista ul .primerhijo:hover{
     background: crimson;
@@ -319,6 +319,10 @@ ul li{
 .productWrapper .titulodelista{
     background: none;
     border: none;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 3.7rem;
+    letter-spacing: 2px;
+    font-weight: 600;
 }
 .productWrapper .titulodelista span{
     display: none;
@@ -341,14 +345,11 @@ ul li{
     padding: 2rem;
     background: white;
     box-shadow: 0 1px 3px grey;
+    border-radius: 8px;
    /* width: calc(100% /3.6 - 20px);
     margin-bottom: 3rem; */
 }
-/* .tarjetasTotal .tarjetasWrapper:hover{
-    transform: scale(1.05);
-    box-shadow: 0 1px 14px grey;
-    transition: all 500ms;
-}  */
+
 .tarjetasTotal .tarjetasWrapper .contenedorImagen{
     width: 100%;
     height: 42%;
@@ -367,6 +368,113 @@ ul li{
     padding: 1rem;
     text-transform: capitalize;
 }
+
+/*------------------------boton del whapp-----------*/
+.flotante2{
+    box-shadow: 0 0 1.4rem grey;
+   position: fixed;
+   right: 3rem;
+   bottom: 3rem;
+   font-size: 22px;
+   background-color: #2dd449;
+   color: white;
+   width: 6rem;
+   height: 6rem;
+   cursor: pointer;
+   border: none;
+   border-radius: 50%;
+   z-index: 20;
+}
+/*------------------------boton del whapp-----------*/
+
+/*------------------------FOOTER----------*/
+footer{
+    height: 40vh;
+    background: black;
+}
+
+/*------------------------FOOTER----------*/
+/*--mi firma--*/
+.micw{
+    text-align: center;
+    font-size: 1.4rem;
+    background-color: #fdf88a;
+    height: 3rem;
+    font-weight: 500;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*---mi firma----*/
+
+/*-----------------------QUIENES SOMOS---------*/
+.whowrap{
+    display: flex;
+    width: 100%;
+    height: 90vh;
+    color: white;
+}
+.whowrap .whobox{
+   height: 100%;
+   padding: 3.5rem;
+}
+.whowrap .whobox p{
+    font-size: 2.2rem;
+}
+.whowrap .whobox1 p{
+   margin-top: 3rem;
+
+}
+.whowrap .whobox1{
+    order: 2;
+    flex-basis: 40%;
+    background: #4a4a4a;
+}
+.whowrap .whobox1 h4{
+    text-transform: capitalize;
+    color: yellow;
+    font-size: 4rem;
+}
+.whowrap .whobox span{
+    width: 100%;
+    margin: 2rem 0 2rem 50%;
+    font-size: 4rem;
+    color: #73b711;
+    display: block;
+}
+.whowrap .whobox2{
+    flex-basis: 60%;
+    background: rgb(211 211 211 / 0.7);
+    color: black;
+    padding: 4rem;
+    height: 100%;
+}
+.whowrap .whobox2 h4{
+    color: green;
+    font-size: 4rem;
+    text-transform: capitalize;
+    font-weight: 600;
+    margin-bottom: 4rem;
+}
+.whowrap .whobox2 span{
+    color: crimson;
+}
+.whowrap .whobox2 p{
+   font-weight: 600;
+}
+/*-----------------------QUIENES SOMOS---------*/
+
+
+
+
+
+
+
+
+
+
 
 
 
