--- a/public/style.css
+++ b/public/style.css
@@ -337,7 +337,7 @@ ul li{
     grid-template-columns: 27% 27% 27%;
     grid-gap: 3rem;
     width: 78%;
-    grid-template-rows: 410px;
+    grid-template-rows: 42rem;
    /* display: flex;
     justify-content: space-evenly;
     flex-basis: 78%;
@@ -417,7 +417,7 @@ footer{
     width: 100%;
     height: 90vh;
     color: white;
-    margin-top: 6rem;
+    margin: 6rem 0;
 }
 .whowrap .whobox{
    height: 100%;
@@ -489,8 +489,20 @@ footer{
 
 /*-----------------------PARALLAX---------*/
 
+.contenedorparalax{
+ 
+    position: relative;
+    height: 500px;
+    overflow: hidden;
+}
+.contenedorparalax .paralax{
+    background-image: url(img/paralax.jpg);
+    background-size: cover;
+    height: 100vh;
+    position: absolute;
+    background-attachment: fixed;
 
-
+}
 
 
 
