--- a/public/contactoestilo.css
+++ b/public/contactoestilo.css
@@ -1,14 +1,24 @@
 
 .margenContacto{
-    height: 24%;
-}
-.hamburg{
-    display: none;
+    height: 21.23%;
 }
 
 /*-------------------------------------------contacto---*/
 
 /*--mi estilo de contacto--*/
+.contactoWrap{
+    width: 100%;
+    min-height: 100vh;
+    background-image: url(img/detrascontacto.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.contactoFiltro{
+    width: 100%;
+    height: 100%;
+    background: rgb(43, 62, 80,.9);
+}
 .contacto{
     width: 80%;
     min-height: 95vh;
@@ -19,6 +29,7 @@
     grid-template-rows: 49rem;
     gap: 2.2rem;
 }
+
 .contacto1{
     display: flex;
     flex-direction: column;
@@ -29,7 +40,8 @@
     line-height: 6rem;
     font-weight: 400;
     margin: 6rem 0 2rem 0;
-    color: black;
+    color: white;
+    font-weight: 400;
 }
 .contacto1 h5{
     font-size: 2rem;
@@ -43,7 +55,10 @@
 .contacto1 p{
     font-size: 1.55rem;
     font-family: var(--fuente3);
+    color: turquoise;
+    padding-left: 1.5rem;
 }
+
 .contactotelefono{
     display: flex;
     align-items: center;
@@ -53,6 +68,11 @@
     color: black;
     font-weight: bold;
     border-left: 2px solid white;
+}
+.contactotelefono .containericonocontacto{
+    background: white;
+    border-radius: 50%;
+    margin: 0 1.5rem 1rem 0;
 }
 .contactotelefono img{
     width: 3rem;
@@ -67,11 +87,12 @@
     margin: 0;
     font-size: 2rem;
     line-height: 6rem;
-    font-weight: 400;
+    font-weight: 500;
 }
 .contactoContenido{
     font-weight: 500;
     margin-left: 1rem;
+    color: white;
 }
 /*------*/
 .contactoredes{
@@ -83,23 +104,23 @@
 }
 .contactoredes .face{
   /*  color: #0572e6;*/
-  color: black;
+  color: turquoise;
 }
 .contactoredes .insta{
   /*  color: #ed6039;*/
-  color: black;
+  color: turquoise;
 }
 .contactoredes .twit{
    /* color: #1da1f2;*/
-   color: black;
+   color: turquoise;
 }
 .contactoredes .pint{
    /* color: #c2191e;*/
-   color: black;
+   color: turquoise;
 }
 .contactoredes .wap{
    /* color: #1bd741;*/
-   color: black;
+   color: turquoise;
     font-weight: 600;
 }
 .contactoredes span{
@@ -112,6 +133,9 @@
 .formulariohijo{
     display: flex;
     flex-direction: column;
+    background: rgb(255 255 255 / 1);
+    padding: 3rem;
+    border-radius: 9px;
  }
  .formulariohijo h2{
      font-size: 3em;
@@ -135,8 +159,9 @@
      font-size: 1.6em;
      color: white;
      font-weight: bold;
-     background-color: #0d47a1;
+     background-color: seagreen;
      cursor: pointer;
+     border-radius: 8px;
  }
  
  /*---MENSAJE GRACIAS---*/
