--- a/public/style.css
+++ b/public/style.css
@@ -112,8 +112,15 @@ ul li{
     margin: 0 1rem;
 }
 .barrita1 h4{
-    margin-left: 4rem;
     font-size: 2rem;
+    height: inherit;
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 4rem;
+    font-weight: 500;
+}
+.barrita1 h4 .telefonito{
+    margin: 0 8px 0 3px;
 }
 .barrita2 .f, .i, .t,.p{
     margin: .7rem;
@@ -157,7 +164,6 @@ ul li{
     flex: 1;
     background: rgb(0, 0, 0,0.8);
     border-right: 8px solid #639bf7;
-    box-shadow: 0 0 4px black;
 }
 .secNav .secNavwrapper .relleno h1{
     font-family: 'Shadows Into Light', cursive;
@@ -176,32 +182,36 @@ ul li{
     flex: 2;
 }
 .secNav .secNavwrapper nav a{
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     font-weight: 500;
     color: #f5f20e;
     letter-spacing: 1.3px;
+    text-transform: uppercase;
 }
 .secNav .secNavwrapper nav a:hover{
     text-decoration: underline;
 }
 .secNav .secNavwrapper .hogar{
-    font-size: 1.8rem;
-    font-style: italic;
-    letter-spacing: 2.3px;
-    background-color: orange;
+    font-size: 3rem;
+    letter-spacing: 2.6px;
     padding: 0 2rem;
     border-radius: 8px;
-    color: black;
+    color: deeppink;
     font-weight: 600;
     height: 5rem;
     display: flex;
     align-items: center;
+    font-family: 'Shadows Into Light', cursive;
 }
 .headerTotal{
     position: absolute;
     top: 0;
     left: 0;
 }
+.secNav .hamburg{
+    display: none;
+}
+
 
 /**-----------------ESTILOS DEL COMPONENTE HEADER**/
 
@@ -455,46 +465,50 @@ footer{
     height: 100%;
 }
 .whowrap .whobox2 h4{
-    color: green;
+    color: black;
     font-size: 3.5rem;
     text-transform: capitalize;
     font-weight: 600;
     margin-bottom: 4rem;
 }
-.whowrap .whobox2 span{
-    color: #f96a04;
+.whowrap .whobox2 .cajaraton{
+    width: 100%;
+    margin: 0;
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25%;
 }
+.whowrap .whobox2 .cajaraton img{
+    width: 7rem;
+}
+
 .whowrap .whobox2 p{
    font-weight: 600;
 }
 /*-----------------------QUIENES SOMOS---------*/
 
 /*-----------------------PARALLAX---------*/
+
   .contenedorparalax{
       width: 100%;
-      height: 80vh;
+      height: 65vh;
+      overflow: hidden;
+      position: relative;
   }
   .contenedorparalax .paralax{
       background-image: url(img/paralax.jpg);
       width: 100%;
-      height: inherit;
+      height: 100vh;
       background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
       position: absolute;
-      overflow: hidden;
-      transition: all 200ms ease-in-out;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      top: 0;
+      left: 0;
   }
 
-/*-----------------------PARALLAX---------*/
-
-.contenedorparalax{
- 
-    position: relative;
-    height: 500px;
-    overflow: hidden;
-}
 .contenedorparalax .paralax{
     background-image: url(img/paralax.jpg);
     background-size: cover;
