--- a/public/style.css
+++ b/public/style.css
@@ -353,17 +353,15 @@ ul li{
     grid-template-columns: 27% 27% 27%;
     grid-gap: 3rem;
     width: 78%;
-    grid-template-rows: 42rem;
-   /* display: flex;
-    justify-content: space-evenly;
-    flex-basis: 78%;
-    flex-wrap: wrap; */
+    /* grid-template-rows: 42rem; */
+  
 }
 .tarjetasTotal .tarjetasWrapper{
     padding: 2rem;
     background: white;
     box-shadow: 0 1px 10px 0px rgb(128 128 128 / 0.5);
     border-radius: 8px;
+    min-height: 42rem;
    /* width: calc(100% /3.6 - 20px);
     margin-bottom: 3rem; */
 }
