--- a/public/style.css
+++ b/public/style.css
@@ -332,6 +332,7 @@ ul li{
     width: 95%;
     margin: 7rem auto;
     display: flex;
+    justify-content: space-around;
 }
 /*...... titulo de la lista ....*/
 .productWrapper .titulodelista{
@@ -348,22 +349,20 @@ ul li{
 
 /*-------------TARJETAS-------------*/
 .tarjetasTotal{
-    justify-content: center;
     display: grid;
-    grid-template-columns: 27% 27% 27%;
+    /* grid-template-columns: repeat(auto-fit,minmax(200px, 1fr)); */
+    grid-template-columns: repeat( 3, 250px );
     grid-gap: 3rem;
-    width: 78%;
-    /* grid-template-rows: 42rem; */
+    width: 70%;
+    /* grid-template-rows: 43rem 43rem; */
   
 }
 .tarjetasTotal .tarjetasWrapper{
-    padding: 2rem;
+    padding: 1rem;
     background: white;
     box-shadow: 0 1px 10px 0px rgb(128 128 128 / 0.5);
-    border-radius: 8px;
-    min-height: 42rem;
-   /* width: calc(100% /3.6 - 20px);
-    margin-bottom: 3rem; */
+    border-radius: 3px;
+    height: 43rem;
 }
 
 .tarjetasTotal .tarjetasWrapper .contenedorImagen{
@@ -377,12 +376,17 @@ ul li{
 }
 .tarjetasTotal .tarjetasWrapper .contenidoTarjeta h4{
     text-transform: capitalize;
+    font-weight: 700;
 }
 /* .tarjetasTotal .tarjetasWrapper .contenidoTarjeta{} 
  */
 .tarjetasTotal .tarjetasWrapper .contenidoTarjeta p{
-    padding: 1rem;
+    padding: 2rem 0.5rem;
     text-transform: capitalize;
+    font-size: 1.5rem;
+    border-top: 1px solid grey;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.774);
 }
 
 /*------------------------boton del whapp-----------*/
@@ -419,17 +423,23 @@ footer .foot1 p{
     margin: 2rem 2rem 3rem 2rem;
 }
 footer .foot1 .redesfoot{
-    width: 82%;
+    width: 56%;
     height: 4.5rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 footer .foot1 .redesfoot .redf{
+    display: block;
     color: white;
     background: #524d4d;
-    padding: 1rem 2rem;
+    width: 40px;
+    height: 40px;
     font-size: 1.6rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 footer .foot1 .redesfoot .redf1{
     background-color: #3a579a;
@@ -471,8 +481,8 @@ footer .foot3 ul li span{
 
 }
 .footitulo{
-    text-decoration: underline red 5px;
     margin-bottom: 3.2rem;
+    color: whitesmoke;
 }
 
 /*------------------------FOOTER----------*/
@@ -528,6 +538,14 @@ footer .foot3 ul li span{
     order: 2;
     flex-basis: 40%;
     background: #4a4a4a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.whowrap .whobox1 img{
+   
+    margin: 6% 0 4% 0;
 }
 .whowrap .whobox1 h4{
     text-transform: capitalize;
